# wlral

./: .gitmodules
.github/workflows/: rust.yml
wlral/: Cargo.toml
wlral/example/: Cargo.toml
wlral/example/src/: main.rs
wlral/src/: compositor.rs  config.rs  event.rs  geometry.rs  lib.rs  macros.rs  output.rs  output_management_protocol.rs  output_manager.rs  surface.rs  wayland_timer.rs  window.rs  window_management_policy.rs  window_manager.rs
wlral/src/input/: cursor.rs  device.rs  event_filter.rs  events.rs  keyboard.rs  mod.rs  seat.rs
wlral/src/shell/: layer.rs  mod.rs  xdg.rs  xwayland.rs
wlroots_sys/: .gitignore  Cargo.toml  build.rs
wlroots_sys/src/: lib.rs  wlroots.h
