[package]
name = "wlral"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus@eneman.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlroots_sys = { path = "../wlroots_sys" }
xkbcommon = "0.4.0"
wayland-sys = "0.24.0"
wayland-server = "0.24.0"

[build-dependencies]
cbindgen = "0.9.1"

