[package]
name = "wlral"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus@eneman.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
wlroots-sys = { path = "../wlroots_sys", features = ["unstable"] }
wayland-sys = "0.24.0"
wayland-server = "0.24.0"
xkbcommon = "0.4.0"
xkbcommon-sys = "0.7.4"

[build-dependencies]
cbindgen = "0.10.0"

[dev-dependencies]
mockall = "0.5.2"
